--- a/server/mainapp/templates/products/box.html
+++ b/server/mainapp/templates/products/box.html
@@ -5,56 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>KoVa Shop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="static/css/main.css" />
     </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="logo">
-            <a href="index.html"><img src="img/logo.jpg" alt="KoVa"></a>
+            <a href="/"><img src="static/img/logo.jpg" alt="KoVa"></a>
             </div>
             <ul class="menu">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="contacts.html">Контакты</a></li>
             </ul>   
-        </div>             
-    <h1>Изделия декора ручной работы</h1>
-    <h2>Ящик для хранения</h2>
-        <div class="product_short_information">
-            <div class="product_short_information_image">
-                <a class="product_page_img" href="img/box.jpg" target="_blank"><img src="img/box.jpg" alt="Коробка" height="300"></a>
-            </div>    
-            <div class="product_short_information_text"><h3 class="product_page_heading">Описание товара:</h3>
-            <p class="product_page_short_text">Данный ящик подходит для хранения предметов утвари небольших размеров.</p>
-            <div class="button_buy">
-                    <button type="button_buy">Купить</button>
-            </div>
-            </div>             
         </div>
-    <h3 class="product_page_heading">Характеристики товара</h3>
-    <table class="product_chararters">
-        <tr>
-            <td>Размер</td>
-            <td>Материалы</td>
-            <td>Способ изготовления</td>
-        </tr>
-        <tr>
-            <td>40 * 20 см</td>
-            <td>Дерево</td>
-            <td>Вручную</td>
-        </tr>
-    </table>
-    <ul class="product_page_characters">
-        <li>Размер ящика 40 * 20 см.</li>
-        <li>Материал:  дерево.</li> 
-    </ul>        
-    <h3 class="product_page_heading">Подробное описание товара</h3>
-    <p class="product_page_full_text"> Ящик создан вручную по уникальной технологии из натуральных материалов.<br>
-        Может использоваться для хранения предметов утвари небольших размеров.<br>
-        Отлично впишется в интерьер, где уже есть некоторое количество винтажных элементов.<br>
-        <b>Не рекомендуется использовать в помещениях с высоким уровнем влажности.</b></p>
-     </p>  
+    <div class="main_area">
+        <h2>Ящик для хранения</h2>
+            <div class="product_short_information">
+                <div class="product_short_information_image">
+                    <a class="product_page_img" href="img/box.jpg" target="_blank"><img src="static/img/box.jpg" alt="Коробка" height="300"></a>
+                </div>
+                <div class="product_short_information_text"><h3 class="product_page_heading">Описание товара:</h3>
+                <p class="product_page_short_text">Данный ящик подходит для хранения предметов утвари небольших размеров.</p>
+                <div class="button_buy">
+                        <button type="button_buy">Купить</button>
+                </div>
+                </div>
+            </div>
+        <h3 class="product_page_heading">Характеристики товара</h3>
+        <table class="product_chararters">
+            <tr>
+                <td>Размер</td>
+                <td>Материалы</td>
+                <td>Способ изготовления</td>
+            </tr>
+            <tr>
+                <td>40 * 20 см</td>
+                <td>Дерево</td>
+                <td>Вручную</td>
+            </tr>
+        </table>
+        <ul class="product_page_characters">
+            <li>Размер ящика 40 * 20 см.</li>
+            <li>Материал:  дерево.</li>
+        </ul>
+        <h3 class="product_page_heading">Подробное описание товара</h3>
+        <p class="product_page_full_text"> Ящик создан вручную по уникальной технологии из натуральных материалов.<br>
+            Может использоваться для хранения предметов утвари небольших размеров.<br>
+            Отлично впишется в интерьер, где уже есть некоторое количество винтажных элементов.<br>
+            <b>Не рекомендуется использовать в помещениях с высоким уровнем влажности.</b></p>
+         </p>
+    </div>
     <hr>
         <div class="footer">
             <p><i>Все права защищены. &copy;</i></p>
