--- a/server/mainapp/templates/products/mirrow.html
+++ b/server/mainapp/templates/products/mirrow.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>KoVa Shop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="static/css/main.css" />
     
 </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="logo">
-            <a href="index.html"><img src="img/logo.jpg" alt="KoVa"></a>
+            <a href="/"><img src="static/img/logo.jpg" alt="KoVa"></a>
             </div>
             <ul class="menu">
                 <li><a href="index.html">Главная</a></li>
@@ -24,7 +24,7 @@
         <h2>Зеркало</h2>
             <div class="product_short_information">
                 <div class="product_short_information_image">
-                    <a class="product_page_img" href="img/mirrow.jpg" target="_blank"><img src="img/mirrow.jpg" alt="Зеркало" height="300"></a>
+                    <a class="product_page_img" href="img/mirrow.jpg" target="_blank"><img src="static/img/mirrow.jpg" alt="Зеркало" height="300"></a>
                 </div>
                 <div class="product_short_information_text"><h3 class="product_page_heading">Описание товара:</h3>
                     <p  class="product_page_short_text">Зеркало используется как зеркало, а еще красивое.</p>
