Change static and media root

--- a/server/mainapp/templates/contacts.html
+++ b/server/mainapp/templates/contacts.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,13 +8,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Контакты</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="static/css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/main.css' %}" />
 </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="logo">
-            <a href="/"><img src="static/img/logo.jpg" alt="KoVa"></a>
+            <a href="/"><img src="{% static 'img/logo.jpg' %}" alt="KoVa"></a>
             </div>
             <ul class="menu">
                 <li><a href="/">Главная</a></li>
