--- a/server/mainapp/templates/index.html
+++ b/server/mainapp/templates/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,22 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>KoVa Shop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="static/css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href=" {% static 'css/main.css' %}" />
 </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="logo">
-            <a href="/"><img src="static/img/logo.jpg" alt="KoVa"></a>
+            <a href="/"><img src="{% static 'img/logo.jpg' %}" alt="KoVa"></a>
             </div>
             <ul class="menu">
                 <li><a href="/">Главная</a></li>
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="contacts.html">Контакты</a></li>
-            </ul>   
+            </ul>
         </div>
         <hr>
-        <div class="main_area">    
+        <div class="main_area">
             <h2>KoVa Shop</h2>
             <p>
                 Привет всем на новом сайте изделий декора ручной работы!
