--- a/server/mainapp/templates/catalog.html
+++ b/server/mainapp/templates/catalog.html
@@ -18,8 +18,8 @@
             </div>
             <ul class="menu">
                 <li><a href="/">Главная</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
+                <li><a href="{% url 'catalog' %}">Каталог</a></li>
+                <li><a href="{% url 'contacts' %}">Контакты</a></li>
             </ul>   
         </div>   
     <hr>
