--- a/server/mainapp/templates/products/box.html
+++ b/server/mainapp/templates/products/box.html
@@ -1,25 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>KoVa Shop</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="static/css/main.css" />
-    </head>
-<body>
-    <div class="container">
-        <div class="header">
-            <div class="logo">
-            <a href="/"><img src="static/img/logo.jpg" alt="KoVa"></a>
-            </div>
-            <ul class="menu">
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
-            </ul>   
-        </div>
-    <div class="main_area">
+{% extends 'base.html' %}
+
+{% load static %}
+
+{% block page_title %}
+Коробка
+{% endblock %}
+
+{% block page_content %}
         <h2>Ящик для хранения</h2>
             <div class="product_short_information">
                 <div class="product_short_information_image">
@@ -55,14 +42,4 @@
             Отлично впишется в интерьер, где уже есть некоторое количество винтажных элементов.<br>
             <b>Не рекомендуется использовать в помещениях с высоким уровнем влажности.</b></p>
          </p>
-    </div>
-    <hr>
-        <div class="footer">
-            <p><i>Все права защищены. &copy;</i></p>
-        </div>
-    
-    </div>
-    
-</body>
-
-</html>
+{% endblock %}
