--- a/server/mainapp/templates/catalog.html
+++ b/server/mainapp/templates/catalog.html
@@ -27,4 +27,20 @@
                         </li>
             </ul>
         </div>
+<div class="product_catalog">
+            <ul>
+                {% for itm in results %}
+
+                <li>
+                    <a href="box.html">
+                        <img src="/media/{{ itm.image }}"
+                            alt="{{ itm.title }}"
+                            ><br>
+                        {{ itm.title }}</a><br>
+                </li>
+                {% endfor %}
+
+            </ul>
+        </div>
+
 {% endblock %}
