Detailed view works with base Content is generated automatically

--- a/server/mainapp/templates/catalog.html
+++ b/server/mainapp/templates/catalog.html
@@ -32,7 +32,7 @@
                 {% for itm in results %}
 
                 <li>
-                    <a href="box.html">
+                        <a href="{% url 'detail' pk=itm.id %}">
                         <img src="/media/{{ itm.image }}"
                             alt="{{ itm.title }}"
                             ><br>
