Short description shows on product_detailed

--- a/server/mainapp/templates/products/components/product_detailed.html
+++ b/server/mainapp/templates/products/components/product_detailed.html
@@ -7,7 +7,7 @@
         </div>
         <div class="product_short_information_text">
             <h3 class="product_page_heading">Описание товара:</h3>
-            <p  class="product_page_short_text">{{ itm.short_description }}</p>
+            <p  class="product_page_short_text">{{ itm.short_desc }}</p>
             <div class="button_buy">
                 <button type="button_buy">Купить</button>
             </div>
