--- a/server/mainapp/templates/includes/menu.html
+++ b/server/mainapp/templates/includes/menu.html
@@ -2,4 +2,18 @@
     <li><a href="/">Главная</a></li>
     <li><a href="{% url 'catalog' %}">Каталог</a></li>
     <li><a href="{% url 'contacts' %}">Контакты</a></li>
+    {% if user.is_authenticated %}
+        <li>
+            <a href="{% url 'auth:edit' %}">
+                {{ user.first_name|default:'Пользователь' }}
+            </a>
+        </li>
+    {% endif %}
+        <li>
+            {% if user.is_authenticated %}
+                <a href="{% url 'auth:logout' %}">Выйти</a>
+            {% else %}
+                <a href="{% url 'auth:login' %}">Войти</a>
+            {% endif %}
+        </li>
 </ul>
