--- a/server/authapp/templates/authapp/register.html
+++ b/server/authapp/templates/authapp/register.html
@@ -5,7 +5,7 @@
 {% block content %}
     <form class="form-horizontal" action="{% url 'auth:register' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ login_form.as_p }}
+        {{ register_form.as_p }}
         <br>
         <input class="form-control" type="submit" value="Зарегистрироваться">
     </form>
