Working categories menu (need url products/d+)

--- a/server/mainapp/templates/includes/inc_categories_menu.html
+++ b/server/mainapp/templates/includes/inc_categories_menu.html
@@ -9,7 +9,7 @@
     </li>
     {% for link in links_menu %}
     <li>
-        <a href="{% 'products:category' link.pk %}"
+        <a href="{% url 'products:category' link.pk %}"
            class="{% if request.resolver_match.kwargs.pk|add:'0' == link.pk %}
             active
             {% endif %}">
