--- a/server/mainapp/templates/includes/menu.html
+++ b/server/mainapp/templates/includes/menu.html
@@ -18,7 +18,10 @@
         </li>
     <li><a href="{% url 'basket:view' %}" class="basket">
         <span>
-            {% if basket %} {{ basket|length }} {% endif %}
+            {% if basket %}
+            {{ basket.0.total_cost|floatformat:0 }} руб
+            ({{ basket.0.total_quantity }} шт)
+            {% endif %}
         </span>
         </a>
     </li>
