--- a/server/basketapp/templates/basketapp/base.html
+++ b/server/basketapp/templates/basketapp/base.html
@@ -8,6 +8,11 @@
     <title>{% block page_title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href=" {% static 'css/main.css' %}" />
+    {% block js %}
+        <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+        <script src="{% static 'js/basket_scripts.js' %}"></script>
+    {% endblock %}
+
 </head>
 <body>
     <div class="container">
