--- a/server/adminapp/templates/adminapp/users.html
+++ b/server/adminapp/templates/adminapp/users.html
@@ -9,7 +9,7 @@
 		</button>
 		{% for object in object_list %}
 			<div class="user_record {% if not object.is_active %}not_active{% endif %}">
-				<img src="{{ object.avatar|media_folder_users }}" alt="{{ object.username }}">
+				<img src="{{ object.avatar|default:'users_avatars/default.jpg' }}" alt="{{ object.username }}">
 				<div class="user_role">
 					{% if object.is_superuser %}администратор{% else %}пользователь{% endif %}
 					<button>
