--- a/server/authapp/templates/authapp/login.html
+++ b/server/authapp/templates/authapp/login.html
@@ -17,5 +17,10 @@
             Зарегистрироваться
         </a>
     </button>
+    <button class="btn btn-round form-control">
+        <a href="{% url 'social:begin' 'google-oauth2 %}?next=/">
+            Google+ SingIn
+        </a>
+    </button>
 
 {% endblock %}
