Google Auth works (not works json.load)

--- a/server/authapp/templates/authapp/login.html
+++ b/server/authapp/templates/authapp/login.html
@@ -18,7 +18,7 @@
         </a>
     </button>
     <button class="btn btn-round form-control">
-        <a href="{% url 'social:begin' 'google-oauth2 %}?next=/">
+        <a href="{% url 'social:begin' 'google-oauth2' %}?next=/">
             Google+ SingIn
         </a>
     </button>
